--- a/compose_infra.yml
+++ b/compose_infra.yml
@@ -5,11 +5,11 @@ web:
     volumes:
         - ./config/php:/code:ro
         - ./config/nginx:/etc/nginx/conf.d:ro
-        - ./static_files:/data:ro
+        - ./${OUT_DIR}:/data:ro
     links:
         - php
 php:
     image: php:7-fpm
     volumes:
         - ./config/php:/code:ro
-        - ./static_files:/data:ro
+        - ./${OUT_DIR}:/data:ro
