Add example code, enable modules

--- a/.env
+++ b/.env
@@ -1,13 +1,12 @@
-IN_DIR=/PATH/TO/FILES # Edit me
-
+IN_DIR=$PWD/examples # Edit me
 OUT_DIR=static_files
-MODULES=false
+MODULES=true
 
 # Adjust paths if 'MODULES=true'
-ANSIBLE=/path/to/files
-GOLANG=/path/to/files
-PUPPET=/path/to/files
-TERRAFORM=/path/to/files
+ANSIBLE=./examples/ansible
+GOLANG=./examples/golang
+PUPPET=./examples/puppet
+TERRAFORM=./examples/terraform
 
 # docker-compose files to use
 COMPOSE_INFRA="compose_infra.yml"
