--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/jbauers/ansible-docgen.git
 [submodule "modules/golang"]
 	path = modules/golang
-	url = ssh://git@github.com/davecheney/godoc2md.git
+	url = https://github.com/davecheney/godoc2md.git
