Move examples to docs/examples, update docs

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-IN_DIR=$PWD/examples # Edit me
+IN_DIR=$PWD/docs # Edit me
 OUT_DIR=static_files
 MODULES=true
 
 # Adjust paths if 'MODULES=true'
-ANSIBLE=./examples/ansible
-GOLANG=./examples/golang
-PUPPET=./examples/puppet
-TERRAFORM=./examples/terraform
+ANSIBLE=./docs/examples/ansible
+GOLANG=./docs/examples/golang
+PUPPET=./docs/examples/puppet
+TERRAFORM=./docs/examples/terraform
 
 # docker-compose files to use
 COMPOSE_INFRA="compose_infra.yml"
