Add moxygen module for C and C++

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ MODULES=true
 # Adjust paths if 'MODULES=true'
 ANSIBLE=./docs/examples/ansible
 GOLANG=./docs/examples/golang
+CXX=./docs/examples/cxx
 PUPPET=./docs/examples/puppet
 TERRAFORM=./docs/examples/terraform
 
